<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:splitMotionEvents="true"
    tools:context=".TextViewActivity"
    android:id="@+id/textViewActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/charsetChangeBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:fontFamily="@font/nanum__barungothicbold"
        android:paddingTop="2dp"
        android:text="@string/text_encoding_btn_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fontSizeBtn" />

    <Button
        android:id="@+id/fontSizeBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:fontFamily="@font/nanum__barungothicbold"
        android:paddingTop="2dp"
        android:text="@string/text_text_size_btn_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/charsetChangeBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/searchBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:fontFamily="@font/nanum__barungothicbold"
        android:paddingTop="2dp"
        android:text="@string/text_search_btn_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/moveLineBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/charsetChangeBtn" />

    <Button
        android:id="@+id/moveLineBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:fontFamily="@font/nanum__barungothicbold"
        android:paddingTop="2dp"
        android:text="@string/text_change_line_btn_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/searchBtn" />

    <Button
        android:id="@+id/prevTextPageBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:text="Prev"
        app:layout_constraintBottom_toBottomOf="@+id/lineSizeTextView"
        app:layout_constraintEnd_toStartOf="@+id/textMenuBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextTextPageBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="@+id/lineSizeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textMenuBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/textSizeSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:elevation="2dp"
        android:max="10"
        android:paddingTop="2dip"
        android:progress="1"
        android:progressTint="#FF5722"
        android:thumbTint="#FF5722"
        app:layout_constraintBottom_toTopOf="@+id/charsetChangeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/pageSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:elevation="2dp"
        android:max="10"
        android:paddingTop="2dip"
        android:progress="1"
        android:progressTint="#FF5722"
        android:thumbTint="#FF5722"
        app:layout_constraintBottom_toTopOf="@+id/charsetChangeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/lineSizeSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:elevation="2dp"
        android:max="10"
        android:paddingTop="2dip"
        android:progress="1"
        android:progressTint="#FF5722"
        android:thumbTint="#FF5722"
        app:layout_constraintBottom_toTopOf="@+id/textSizeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:elevation="2sp"
        android:fontFamily="@font/nanum__barungothicbold"
        android:paddingLeft="4dip"
        android:paddingTop="4dip"
        android:paddingRight="4dip"
        android:paddingBottom="2dip"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textSizeSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:elevation="2sp"
        android:fontFamily="@font/nanum__barungothicbold"
        android:paddingLeft="4dip"
        android:paddingTop="4dip"
        android:paddingRight="4dip"
        android:paddingBottom="2dip"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/pageSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lineSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:elevation="2sp"
        android:fontFamily="@font/nanum__barungothicbold"
        android:paddingLeft="4dip"
        android:paddingTop="4dip"
        android:paddingRight="4dip"
        android:paddingBottom="2dip"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/lineSizeSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textFileTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#252525"
        android:drawableTint="#252525"
        android:elevation="2sp"
        android:fontFamily="@font/nanum__barungothicbold"
        android:paddingLeft="4dip"
        android:paddingTop="4dip"
        android:paddingRight="4dip"
        android:paddingBottom="2dip"
        android:text="Filename.image"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/textMenuBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:elevation="2dp"
        android:ems="10"
        android:fontFamily="@font/nanum__barungothicbold"
        android:hint="@string/text_search_btn_text"
        android:inputType="textPersonName"
        android:paddingStart="2dip"
        android:paddingEnd="2dip"
        android:textColor="#FFFFFF"
        android:textColorHint="#9B9B9B"
        android:textCursorDrawable="?attr/colorError"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/charsetChangeBtn"
        app:layout_constraintEnd_toStartOf="@+id/searchGoNextBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/searchGoPrevBtn"
        app:layout_constraintTop_toTopOf="@+id/searchGoNextBtn" />

    <Button
        android:id="@+id/searchGoPrevBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:fontFamily="@font/nanum__barungothicbold"
        android:text="@string/text_search_prev_btn_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/fontSizeBtn"
        app:layout_constraintEnd_toStartOf="@+id/searchEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/searchGoNextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="#252525"
        android:fontFamily="@font/nanum__barungothicbold"
        android:text="@string/text_search_next_btn_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/moveLineBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/searchEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>