<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ComicActivity"
    android:id="@+id/comicViewActivity">

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/prevBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menuBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/prevBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menuBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/optionUiContainerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/imageFileTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:background="#252525"
            android:drawableTint="#252525"
            android:fontFamily="@font/nanum__barungothicbold"
            android:paddingLeft="4dip"
            android:paddingTop="4dip"
            android:paddingRight="4dip"
            android:paddingBottom="2dip"
            android:text="Filename.image"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cropSizeLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/option3Btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/cropTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="#252525"
                android:drawableTint="#252525"
                android:fontFamily="@font/nanum__barungothicbold"
                android:paddingLeft="4dip"
                android:paddingTop="4dip"
                android:paddingRight="4dip"
                android:paddingBottom="2dip"
                android:text="CropSize : 0"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/cropSeekBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <SeekBar
                android:id="@+id/cropSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:background="#252525"
                android:elevation="2dp"
                android:max="10"
                android:paddingTop="2dip"
                android:progress="1"
                android:progressTint="#FF5722"
                android:thumbTint="#FF5722"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pageSeekLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/option3Btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/currentPageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="#252525"
                android:drawableTint="#252525"
                android:fontFamily="@font/nanum__barungothicbold"
                android:paddingLeft="4dip"
                android:paddingTop="4dip"
                android:paddingRight="4dip"
                android:paddingBottom="2dip"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/pageSeekBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <SeekBar
                android:id="@+id/pageSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:background="#252525"
                android:elevation="2dp"
                android:max="10"
                android:paddingTop="2dip"
                android:progress="1"
                android:progressTint="#FF5722"
                android:thumbTint="#FF5722"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/option1Btn"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:background="#252525"
            android:backgroundTint="#252525"
            android:fontFamily="@font/nanum__barungothicbold"
            android:paddingTop="2dip"
            android:text="@string/comic_viewdir_btn_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/option2Btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/option2Btn"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:background="#252525"
            android:backgroundTint="#252525"
            android:fontFamily="@font/nanum__barungothicbold"
            android:paddingTop="2dip"
            android:text="@string/comic_page_btn_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/option3Btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/option1Btn" />

        <Button
            android:id="@+id/option3Btn"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:background="#252525"
            android:backgroundTint="#252525"
            android:fontFamily="@font/nanum__barungothicbold"
            android:paddingTop="2dip"
            android:text="@string/comic_zoom_btn_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/option4Btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/option2Btn" />

        <Button
            android:id="@+id/option4Btn"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:background="#252525"
            android:backgroundTint="#252525"
            android:fontFamily="@font/nanum__barungothicbold"
            android:paddingTop="2dip"
            android:text="@string/comic_touch_gesture_btn_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/option5Btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/option3Btn" />

        <Button
            android:id="@+id/option5Btn"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="#252525"
            android:backgroundTint="#252525"
            android:fontFamily="@font/nanum__barungothicbold"
            android:paddingTop="2dip"
            android:text="@string/comic_change_chapter_btn_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/option4Btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/comicImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>